# Embedded

./: README.md
Deploy IoT Hub to Azure/: How To.md
Deploy Unix Distribution To Azure/: HowTo.md
Rust/: How To Create a Cargo Project.md  HowTo Install Rust.md  Rust Knowledge.md
Rust/IoTSimulator/: Cargo.toml
Rust/IoTSimulator/src/: main.rs
Rust/Projects/: IoT Simulator.pbix
Rust/Projects/guessing_game/: main.rs
