[package]
name = "IoTSimulator"
version = "0.1.0"
edition = "2024"

[dependencies]
azure_iot_sdk = "0.8.0"

# JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Random number generation
rand = "0.8"

# Tokio async runtime
tokio = { version = "1.40", features = ["full"] }
